@@ -1,5 +1,8 @@
 2004-01-25  Martin Blom  <martin@blom.org>
 
+	* ahi.device: Removed gasp dependency. gasp is no longer required
+	for building AHI.
+
 	* Drivers: Applied patches to make mode file generation work
 	without using (the now obsolete tool) gasp. [Fabio Alemagna]
 
